--- a/snipper-web/src/main/web/auction/screen/layout/header.vm
+++ b/snipper-web/src/main/web/auction/screen/layout/header.vm
@@ -1,35 +1,44 @@
-<nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
-    <div class="container-fluid">
-        <div class="navbar-header">
-            <a class="navbar-brand" href="/tmallincubator/version/showAll.htm">天猫产品孵化器</a>
-            <ul class="nav navbar-nav navbar-right">
-                <li #if($!{_module}=="fqg") class="active" #end><a href="#">分期购</a></li>
-                <li class="dropdown #if($!{_module}=="version") active #end"">
-                    <a href="#" class="dropdown-toggle"  data-toggle="dropdown">版本管理<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="/tmallincubator/version/showAll.htm"><span class="glyphicon glyphicon-cog"></span>无线组件版本管理</a></li>
-                        <li><a href="/tmallincubator/version/showMock.htm"><span class="glyphicon glyphicon-th-large"></span>版本管理模拟器</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-right">
-
-            </form>
+<!-- start header -->
+<header class="main-header"  style="background-image: url(../statics/img/header.jpg)"">
+<div class="container">
+    <div class="row">
+        <div class="col-sm-12">
+            <!-- start logo -->
+            <a class="branding" href="http://www.ghostchina.com" title="Ghost 开源博客平台"><img src="http://static.ghostchina.com/image/b/46/4f5566c1f7bc28b3f7ac1fada8abe.png" alt="Ghost 开源博客平台"></a>
+            <!-- end logo -->
+            <h2 class="text-hide">感谢访问editice的小站</h2>
+            <img src="../statics/img/header.jpg" alt="博客系统" class="hide">
         </div>
-        <div id="navbar" class="navbar-collapse collapse">
-            <ul class="nav navbar-nav navbar-right">
-                <li class="dropdown">
-                    <a href="#" class="dropdown-toggle" data-toggle="dropdown">工具<span class="caret"></span></a>
-                    <ul class="dropdown-menu" role="menu">
-                        <li><a href="#">debug请求查看</a></li>
-                    </ul>
-                </li>
-            </ul>
-            <form class="navbar-form navbar-right">
+    </div>
+</div>
+</header>
+<!-- end header -->
 
-            </form>
+<!-- start navigation -->
+<nav class="main-navigation">
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="navbar-header">
+                        <span class="nav-toggle-button collapsed" data-toggle="collapse" data-target="#main-menu">
+                        <span class="sr-only">Toggle navigation</span>
+                        <i class="fa fa-bars"></i>
+                        </span>
+                </div>
+                <div class="collapse navbar-collapse" id="main-menu">
+                    <ul class="menu">
+                        <li class="nav-current" role="presentation"><a href="/">首页</a></li>
+                        <li  role="presentation"><a href="http://wenda.ghostchina.com">博客</a></li>
+                        <li  role="presentation"><a href="/ghost-cheat-sheet/">分享</a></li>
+                        <li  role="presentation"><a href="http://docs.ghostchina.com/zh/">文档</a></li>
+                        <li  role="presentation"><a href="/download/">工具</a></li>
+                        <li  role="presentation"><a href="/about/">关于</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <!--/.nav-collapse -->
     </div>
 </nav>
 
+
+<!-- end navigation -->
