--- a/snipper-web/src/main/web/auction/screen/layout/index.vm
+++ b/snipper-web/src/main/web/auction/screen/layout/index.vm
@@ -6,7 +6,7 @@
     <!-- 上述3个meta标签*必须*放在最前面，任何其他内容都*必须*跟随其后！ -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="../statics/img/blue.ico">
+    <link rel="icon" href="../../statics/img/blue.ico">
     <title>editice的小站</title>
 
     <link href="../statics/css/bootstrap.min.css" rel="stylesheet">
