--- a/snipper-web/src/main/web/auction/screen/layout/header.vm
+++ b/snipper-web/src/main/web/auction/screen/layout/header.vm
@@ -4,7 +4,7 @@
     <div class="row">
         <div class="col-sm-12">
             <!-- start logo -->
-            <a class="branding" href="http://www.ghostchina.com" title="Ghost 开源博客平台"><img src="http://static.ghostchina.com/image/b/46/4f5566c1f7bc28b3f7ac1fada8abe.png" alt="Ghost 开源博客平台"></a>
+            <a class="branding" href="http://www.editice.com" title="editice的小站"><img src="http://static.ghostchina.com/image/b/46/4f5566c1f7bc28b3f7ac1fada8abe.png" alt="editice的小站"></a>
             <!-- end logo -->
             <h2 class="text-hide">感谢访问editice的小站</h2>
             <img src="../statics/img/header.jpg" alt="博客系统" class="hide">
@@ -27,12 +27,11 @@
                 </div>
                 <div class="collapse navbar-collapse" id="main-menu">
                     <ul class="menu">
-                        <li class="nav-current" role="presentation"><a href="/">首页</a></li>
-                        <li  role="presentation"><a href="http://wenda.ghostchina.com">博客</a></li>
-                        <li  role="presentation"><a href="/ghost-cheat-sheet/">分享</a></li>
-                        <li  role="presentation"><a href="http://docs.ghostchina.com/zh/">文档</a></li>
-                        <li  role="presentation"><a href="/download/">工具</a></li>
-                        <li  role="presentation"><a href="/about/">关于</a></li>
+                        <li class="nav-current" role="presentation"><a href="/snipper/blogs/blogPage.htm">首页</a></li>
+                        <li  role="presentation"><a href="/snipper/blogs/blogPage.htm">博客</a></li>
+                        <li  role="presentation"><a href="#">读书笔记</a></li>
+                        <li  role="presentation"><a href="#">工具</a></li>
+                        <li  role="presentation"><a href="/snipper/about/page.htm">关于</a></li>
                     </ul>
                 </div>
             </div>
