--- a/snipper-web/src/main/web/auction/screen/about.vm
+++ b/snipper-web/src/main/web/auction/screen/about.vm
@@ -12,13 +12,15 @@
                 <p>editice的小站是基于笔者的一点兴趣创建的一个个人网站，用心的去维护好这个小站，并且督促自己每周发表相应的博文来和大家一起共同进步。</p>
             </blockquote>
 
-            <p><img src="http://static.ghostchina.com/image/b/5e/877fa798be75dbe791dba07ac4811.jpg"
-                    alt="John O’Nolan 和 Hannah Wolfe"/></p>
+            <p><img src="http://img3.tbcdn.cn/5476e8b07b923/TB1865LKVXXXXahaXXXXXXXXXXX"
+                    alt="editice的近照"/></p>
 
             <p>2015 年 11 月份，editice的小站开发完成并正式上线。 <br/>
                 小站的初衷是用心去做好每一个小产品，并与广大的网友分享，交流一些心得与体会。</p>
 
             <hr/>
+
+##            <p>学生期间主要研究大数据并行计算，设计开发的sesame-hbase已经开源，目前为三星美国研究院Teratriple系统使用。</p>
 
             <p>如果你喜欢这个小站，可以通过以下方式联系我：</p>
 
