--- a/snipper-web/src/main/web/auction/screen/blogDetail.vm
+++ b/snipper-web/src/main/web/auction/screen/blogDetail.vm
@@ -10,7 +10,7 @@
                 <h1 class="post-title">$!{blog.title}</h1>
                 <section class="post-meta">
                     <span class="author">作者：<a href="/author/wangsai/">$!{blog.author}</a></span> &bull;
-                    <time class="post-date">$!{dateTool.format("MEDIUM", $!{blog.create_time})}</time>
+                    <time class="post-date">$!{dateTool.format("yyyy-MM-dd", $!{blog.create_time})}</time>
                 </section>
             </header>
 
@@ -39,7 +39,7 @@
     </article>
 
     <div class="about-author clearfix">
-        <a href="#"><img src="http://static.ghostchina.com/image/5/ea/da657733ee8c9add9cf3fd70183a6.png" alt="editice"
+        <a href="#"><img src="../statics/img/blue1.png" alt="editice"
                          class="avatar pull-left"></a>
 
         <div class="details">
