--- a/snipper-web/src/main/web/auction/screen/blogTag.vm
+++ b/snipper-web/src/main/web/auction/screen/blogTag.vm
@@ -23,7 +23,7 @@
 
                 <div class="post-meta">
                     <span class="author">作者：<a href="/author/wangsai/">$!{blog.author}</a></span> &bull;
-                    <time class="post-date">$!{dateTool.format("MEDIUM", $!{blog.create_time})}</time>
+                    <time class="post-date">$!{dateTool.format("yyyy-MM-dd", $!{blog.create_time})}</time>
                 </div>
             </div>
             <div class="post-content">
