--- a/snipper-web/src/main/web/auction/screen/layout/header.vm
+++ b/snipper-web/src/main/web/auction/screen/layout/header.vm
@@ -1,12 +1,11 @@
 <!-- start header -->
-<header class="main-header" style="background-image: url(../statics/img/header.jpg)"">
+<header class="main-header" style="">
 <div class="container">
     <div class="row">
         <div class="col-sm-12">
             <!-- start logo -->
             <a class="branding" href="http://www.editice.com" title="editice的小站"><img
-                    src="http://static.ghostchina.com/image/b/46/4f5566c1f7bc28b3f7ac1fada8abe.png"
-                    alt="editice的小站"></a>
+                    src="../statics/img/red.png" alt="editice的小站"></a>
             <!-- end logo -->
             <h2 class="text-hide">感谢访问editice的小站</h2>
             <img src="../statics/img/header.jpg" alt="博客系统" class="hide">
